--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --no-ignore --ext .js --ignore-path .eslintignore --fix"
+      "eslint --ignore-path .eslintignore --fix"
     ]
   }
 }
